[project]
name = "fleet-control"
version = "0.1.0"
description = ""
authors = [
    {name = "hguazza",email = "144302319+hguazza@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "fleet_control", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
